Fixes a ton of contrast errors on the site

--- a/web/css/_buttsweater.scss
+++ b/web/css/_buttsweater.scss
@@ -185,10 +185,10 @@ body {
 	font-size-adjust: none;
 }
 :link {
-	color: #67a281;
+	color: #467259;
 }
 :visited {
-	color: #3c624b;
+	color: #304f3e;
 }
 :link:active,
 :link:hover,
@@ -335,7 +335,6 @@ th {
 .rail h1 {
 	font-size: 1.4em;
 	display: inline-block;
-	color: #aaa;
 	width: 8em;
 	text-align: left;
 	margin: 0 0 .1em 0;
@@ -351,7 +350,13 @@ th {
 	color: transparent;
 }
 .rail .navigation {
-	margin: 1em 0;
+	margin: .25em 0 1em;
+}
+.rail .header .links {
+	margin-top: 1em;
+}
+.header_home {
+	display: none;
 }
 @media (min-width: $twoColLayoutMinWidth) {
 	.rail a.header {
@@ -368,6 +373,12 @@ th {
 		margin-top: .3em;
 		text-align: right;
 	}
+	.rail .navigation {
+		margin-top: .625em;
+	}
+	.header_home {
+		display: block;
+	}
 }
 
 /* Header Links */
@@ -381,9 +392,10 @@ th {
 	margin-top: .4em;
 	padding: .4em .8em;
 }
+.links-standalone,
 .links a,
 .links :visited {
-	color: #aaa;
+	color: #222;
 }
 .links a:hover,
 .links a:focus {
@@ -396,6 +408,7 @@ th {
 	display: block;
 }
 @media (min-width: 30em) {
+	.links-standalone,
 	.links {
 		font-size: .875em;
 	}
@@ -409,6 +422,7 @@ th {
 	.links {
 		text-align: left;
 	}
+	.links-standalone,
 	.links a {
 		display: block;
 		padding-left: 0;
@@ -487,7 +501,7 @@ th {
 .posts .deprecated,
 .posts .deprecated :link,
 .posts .deprecated :visited {
-	color: #ddd;
+	opacity: .6;
 }
 .sub em {
 	margin-right: 1em;
@@ -630,24 +644,14 @@ th {
 	font-weight: 700;
 	line-height: 16px;
 	text-transform: uppercase;
-	color: #999;
-	padding: 0 .4em 0 1.5em;
+	color: #666;
+	padding: 0 .4em;
 	margin: 0 .5em;
 	vertical-align: middle;
-	white-space: nowrap;
 	display: inline-block;
-	position: relative;
-}
-.tag:not(.highlight):before {
-	content: " ";
-	position: absolute;
-	top: 3px;
-	left: 3px;
-	height: 10px;
-	width: 10px;
-	background-color: currentColor;
 }
 .tags {
+	display: inline-block;
 	white-space: nowrap;
 	line-height: 1;
 }
@@ -658,24 +662,13 @@ th {
 .tag.audio .length {
 	text-transform: none;
 }
-/* orangered */
-.tag.video,
-.tag.audio {
-	color: cadetblue;
-}
-.tag.project {
-	color: indianred;
-}
-.tag.research {
-	color: steelblue;
-}
 .tag.tweet {
 	color: #00c9ff;
 }
 .tag.highlight {
-	color: #444;
 	padding-left: .4em;
 	font-family: sans-serif;
+	border: none;
 }
 .tag + .tag {
 	margin-left: -6px;
@@ -685,7 +678,7 @@ th {
 .external {
 	text-transform: uppercase;
 	font-size: 17px;
-	color: #999;
+	color: #666;
 	line-height: 100%;
 }
 .posts .highlight a .external {
